--- a/public/index.html
+++ b/public/index.html
@@ -303,7 +303,7 @@
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fas fa-globe-africa"></i>
-                                    <span>Languages: Arabic,French,English</span>
+                                    <span>Languages: Arabic&French&English</span>
                                 </div>
                                 
                             </div>
